# query-db

./: .env.sample  README.md  pyproject.toml
talk_to_db/: main.py  settings.py  turbo_main.py  types.py
talk_to_db/agents/: agent_config.py  agents.py  instruments.py  turbo4.py
talk_to_db/modules/: db.py  embeddings.py  file.py  llm.py  orchestrator.py  rand.py
