[tool.poetry]
name = "talk-to-db"
version = "0.1.0"
description = ""
authors = ["okunola <abdayoade@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
openai = "^1.43.0"
psycopg2-binary = "^2.9.9"
argparse = "^1.4.0"
python-dotenv = "^1.0.1"
pyautogen = "^0.2.35"
pyyaml = "^6.0.2"
transformers = "^4.44.2"
torch = "^2.4.0"
tiktoken = "^0.7.0"
scikit-learn = "^1.5.1"
guidance = "^0.1.16"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
start = "talk_to_db.main:main"
